# alg_course

./: CMakeLists.txt  README.md
lesson1/: arrays.cpp  arrays.hpp  arrays_test.cpp  main.cpp
lesson2/: list.cpp  list.hpp  list_test.cpp
lesson3/: search.hpp  search_test.cpp
